--- a/Index.HTML
+++ b/Index.HTML
@@ -4,7 +4,7 @@
   <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; Hello World!</p>
+  <p>Hello World!</p>
   <p>This is my very first Website so gently, gently I go.</p>
   <p>My name is John, I am recently retired and now learning a new skill.</P>
   <p>I look forward to coding some very interesting websites in the future</p>
